create 3 box and darkmode button

--- a/index.html
+++ b/index.html
@@ -3,9 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Personal Info Card</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div>
+    <div class="container">
+        <div class="card" id="infoCard">
+            <img src="picture/f8c54ee9-3b12-4549-910b-740deef9977d.png" alt="" style="width:100%">
+            <p><strong>Name:</strong> Topu</p>
+            <p><strong>University:</strong> Green University of Bangladesh</p>
+            <p><strong>Favorite Language:</strong> C </p>
+        </div>
+    </div>
+
+        <div class="container">
+        <div class="card" id="infoCard">
+            <img src="picture/IMG-20250210-WA0012.jpg" alt="" style="width:100%">
+            <p><strong>Name:</strong> Topu </p>
+            <p><strong>University:</strong> Green University of Bangladesh</p>
+            <p><strong>Favorite Language:</strong> C++</p>
+        </div>
+    </div>
+
+        <div class="container">
+        <div class="card" id="infoCard">
+            <img src="picture/PXL_20241106_084717836.PORTRAIT.jpg" alt="" style="width:100%">
+            <p><strong>Name:</strong> Topu </p>
+            <p><strong>University:</strong> Green University of Bangladesh</p>
+            <p><strong>Favorite Language:</strong> C++</p>
+        </div>
+
+
+    <!-- Button at the bottom center -->
+    <div style="width:100%; display:flex; justify-content:center; align-items:center; margin-top:32px;">
+        <button id="darkModeToggle">Toggle Dark Mode</button>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
