--- a/task 1/index.html
+++ b/task 1/index.html
@@ -22,6 +22,13 @@
         <button id="darkModeToggle">Toggle Dark Mode</button>
     </div>
     </div>
+
+      <div class="container">
+    <h1>Upcoming Contests</h1>
+    <div id="upcomingContests"></div>
+    <h2>Past Contests (last 5)</h2>
+    <div id="pastContests"></div>
+  </div>
     <script src="script.js"></script>
 </body>
 </html>
